# Scrapworks

./: .gitignore  99-x7-mouse.rules  AGENTS.md  SKILL.md  VULNERABILITY_REPORT.md  force-port-reset.sh  mouse-backup.txt  peralez_f_about_me_rich.html  peralez_f_bio_replica.html  recover-mouse.sh
.omo/deploy/: lovense-equinox-bridge.service
.omo/plans/: hyperplan-continue.md
.omo/run-continuation/: ses_0ba5b6897ffetCZGHieyfIxaJ7.json
.opencode/: opencode.json
.opencode/agents/: skill-agent-2.md  skill-agent-3.md  skill-agent-4.md  skill-agent.md
.opencode/mcp-deploy/: HOMEPAGE_INTEGRATION.md  deploy.sh  docker-compose.yml  mcphub-config.yml  ntfy-config.yml
.opencode/skills/agent-harnesses/: SKILL.md
.opencode/skills/content-utils/: SKILL.md
.opencode/skills/data-utils/: SKILL.md
.opencode/skills/dev-utils/: SKILL.md
.opencode/skills/file-utils/: SKILL.md
.opencode/skills/net-utils/: SKILL.md
.opencode/skills/orchestrator/: SKILL.md
.opencode/skills/script-toolkit/: SKILL.md
.opencode/skills/sys-utils/: SKILL.md
.opencode/skills/text-utils/: SKILL.md
Chaturbate V2 apps/: AGENTS.md  PHASE1_PROMPT.md  QUICKREF.md  SKILL.md  TRUTH.md
Chaturbate V2 apps/stream-manager/: .debug-journal.md  README.md  overlay.html  settings-schema.json  shared.js  simulator.js
Chaturbate V2 apps/stream-manager/handlers/: app-settings-change.js  app-start.js  app-stop.js  broadcast-panel-update.js  broadcast-start.js  broadcast-stop.js  callback.js  chat-message-transform.js  chat-message.js  fanclub-join.js  media-purchase.js  room-status-change.js  shortcut.js  tip-dialog-open.js  tip-received.js  user-enter.js  user-follow.js  user-leave.js  user-unfollow.js
Mouse-related/: FINDINGS-9066.md  MOUSE-FIRMWARE-RECOVERY.md  OSCAR_RE.md  README.md  mouse-9066-backup.txt
Mouse-related/OscarX7Editor5Mode/OscarX7Editor5Mode/: Execute.ini
Mouse-related/oscar-linux/: build.zig
Mouse-related/oscar-linux/src/: hid.zig  hidraw.zig  ini.zig  main.zig  protocol.zig
lovense-shenanigans/: AGENTS.md  install-lovense-bridge.zsh
lovense-shenanigans/lovense-equinox-bridge/: README.md  USER_MANUAL.md  bridge.py  lovense-bridge.user.js  lovense_api.py  magic_motion.py  requirements.txt  test_fixes.py
lovense-shenanigans/lovense-equinox-bridge/tests/: conftest.py  test_bridge.py  test_lovense_api.py  test_magic_motion.py
lovense-shenanigans/lovense-toolset-source/lovense-ai-camera/: ReadMe.md  changes.txt
lovense-shenanigans/lovense-toolset-source/lovense-obs-websocket/: CMakeLists.txt
lovense-shenanigans/lovense-toolset-source/lovense-obs-websocket/src/: Config.h  WSRequestHandler.cpp  WSRequestHandler.h  WSRequestHandler_General.cpp  WSRequestHandler_Outputs.cpp  WSRequestHandler_Recording.cpp  WSRequestHandler_Sources.cpp  WSRequestHandler_VirtualCam.cpp  WSServer.cpp  obs-websocket.h  plugin-macros.generated.h
lovense-shenanigans/lovense-toolset-source/lovense-obs-websocket/src/protocol/: OBSRemoteProtocol.h
lovense-shenanigans/lovense-toolset-source/lovense-obs-websocket/src/rpc/: RpcRequest.h
lovense-shenanigans/lovense-toolset-source/lovense-relay-server/: rs_common.hpp  rs_common_handler.hpp  rs_helper.hpp  rs_proc_handler.cpp
lovense-shenanigans/lovense-toolset-source/lovense-smart-object/: CMakeLists.txt  gs-common.h  lvs_greenscreen.cpp  lvs_greenscreen.h  main.cpp  so-detection-center.hpp  so-dlib-impl.cpp  so-dlib-impl.hpp  so-helper.hpp  so-proc-handler.hpp
lovense-shenanigans/lovense-toolset-source/lovense-smart-object/data/locale/: en-US.ini
lovense-shenanigans/lovense-toolset-source/lovense-webcam/: CMakeLists.txt  PositionTokensData.h  UntilHelp.cpp  macResouce.h  push-widget.cpp
lovense-shenanigans/lovense-toolset-source/lovense-webcam/data/locale/: en-US.ini  es-ES.ini  ko-KR.ini
lovense-shenanigans/lovense-toolset-source/lovense-webcam/form/: MainControlDockWidget.cpp  MainControlDockWidget.h  MainControlPanel.cpp  MainControlPanel.h  NewPositionDialog.cpp  PanControlWidget.cpp  PanControlWidget.h  PositionWidget.cpp  RemoteControlDialog.cpp
lovense-toolset-source/lovense-ai-camera/: .gitignore
lovense-toolset-source/lovense-relay-server/: CMakeLists.txt  main.cpp  rs_common_handler.cpp  rs_helper.cpp  rs_proc_handler.hpp
lovense-toolset-source/lovense-relay-server/client/: rs_webcam_proxy.cpp
lovense-toolset-source/lovense-relay-server/http/: rs_http_server.cpp  rs_http_server.hpp
lovense-toolset-source/lovense-relay-server/ipc/: rs_ipc_handler.cpp
lovense-toolset-source/lovense-relay-server/server/: LovenseUntil.cpp  lovense_camera_handler.cpp  lovense_camera_handler.hpp  lovense_insta360_handler.cpp  rs_proxy.hpp  rs_server.cpp
lovense-toolset-source/lovense-relay-server/toolset/: lovense_toolset_custom.cpp  lovense_toolset_custom.hpp
lovense-toolset-source/lovense-relay-server/toolset/mac/: SCPluginConfig.h  SCPluginConfig.mm
lovense-toolset-source/lovense-smart-object/: background-filter.cpp  gs-render-media.cpp  gs-render-media.h  so-common.hpp  so-detection-center.cpp  so-helper.cpp  so-proc-handler.cpp  so-smart-filter.cpp
lovense-toolset-source/lovense-video-freeback/: CMakeLists.txt  browser-proc-handler.cpp  browser-proc-handler.hpp  obs-browser-source.cpp
lovense-toolset-source/lovense-video-freeback/mac/: CPluginsUpdate.hpp  UserDefine.h
lovense-toolset-source/lovense-video-freeback/manifest/x86/: Lovense-browser-page.exe1.manifest
lovense-toolset-source/lovense-video-freeback/toolset/: lovense_toolset_custom.cpp  lovense_toolset_custom.hpp  lovense_toolset_updater.cpp  lovense_toolset_updater.hpp
lovense-toolset-source/lovense-webcam/: UntilHelp.h  macResouce.mm  obs-multi-rtmp.cpp  push-widget.h
lovense-toolset-source/obs-multi-rtmp/: CMakeLists.txt  push-widget.cpp  version.rc
lovense-toolset-source/obs-multi-rtmp/data/locale/: en-US.ini  ru-RU.ini  zh-CN.ini  zh-TW.ini
scripts/: check-url.sh  data-stats.py  detect-format.sh  diff-summary.sh  encode-decode.sh  extract.sh  file-organize.sh  json-pretty.py  note-create.sh  summarize.sh  sys-info.sh  template-gen.sh  workflow-run.sh
(+161 files in other folders)
